--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
   <title>Blog</title>
   <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="vendor/styles/normalize.css">
   <!-- REVIEW: Icon Fonts - Lets talk about why and how to use them best! -->
   <link rel="stylesheet" href="styles/icons.css">
@@ -23,7 +24,8 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here. -->
-
+      <input type="checkbox" class="nav-trigger" id="nav-trigger">
+      <label for="nav-trigger"></label>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
@@ -32,7 +34,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="site-wrap">
     <section id="articles" class="tab-content">
       <article class="template template" data-category="cat">
         <header>
